<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="wrap_content"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/character_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView"
        app:layout_constraintTop_toTopOf="@+id/imageFilterView">

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_can_i_do_for_you"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_blue"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <TextView
            android:id="@+id/btnRetinopathyCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_7sdp"
            android:text="@string/retinopathy_check"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_blue"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1">

        <TextView
            android:id="@+id/btnRetinopathyCheck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_7sdp"
            android:text="@string/chat_bot"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvRecomendedArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recomended_article"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvRecomendedArticle"
        tools:itemCount="3"
        tools:listitem="@layout/item_article" />


</androidx.constraintlayout.widget.ConstraintLayout>